--- a/mario-examples/index.html
+++ b/mario-examples/index.html
@@ -4,9 +4,16 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="sky"></div>
+  <div class="sky">
+    <img class="cloudbis" src="img/cloud.png">
+    <img class="cloudbis" src="img/cloud.png">    
+    <img class="cloud" src="img/cloud.png">
+    <div class="circle">Hover Me</div>
+  </div>
   <div class="grass"></div>
   <div class="road">
     <div class="lines"></div>
+    <img class="mario" src="img/mario.png">
+    <img class="luigi" src="img/luigi.png">
   </div>
 </body>
